[package]
name = "postflop-solver"
version = "0.1.0"
authors = ["Wataru Inariba"]
edition = "2024"
description = "An open-source postflop solver for Texas hold'em poker"
documentation = "https://b-inary.github.io/postflop_solver/postflop_solver/"
repository = "https://github.com/b-inary/postflop-solver"
license = "AGPL-3.0-or-later"

[dependencies]
bincode = { version = "2", optional = true }
bincode_derive = { version = "2", optional = true}
rayon = { version = "1", optional = true }
regex = "1"
foldhash = "0.1"
dashmap = "6"
fastrand = "2"
zstd = { version = "0.12", optional = true, default-features = false }

[features]
default = ["bincode", "rayon"]
bincode = ["dep:bincode", "dep:bincode_derive"]
custom-alloc = []
rayon = ["dep:rayon", "zstd?/zstdmt"]
